--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/phase7?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/housekeeperdemo?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=Patan@27
 spring.jpa.properties.hibernate.show_sql=true
